@@ -31,6 +31,10 @@ Development version
 - Issue #24: Add six.moves.range alias. This exactly the same as the current
   xrange alias.
 
+- Pull request #5: Create six.moves.urllib, which contains abstractions for a
+  bunch of things which are in urllib in Python 3 and spread out across urllib,
+  urllib2, and urlparse in Python 2.
+
 1.3.0
 -----
 
